--- a/odoo_module/ap_invoice_request/views/invoice_request_views.xml
+++ b/odoo_module/ap_invoice_request/views/invoice_request_views.xml
@@ -23,14 +23,23 @@
             <form string="Invoice Request">
                 <header>
                     <button name="approve_request" type="object" string="Approve and Create Invoice" class="oe_highlight" invisible="state != 'pending'"/>
+
+					<button name="open_external_link" type="object" string="View External Form"
+						class="btn-secondary" icon="fa-external-link" invisible="state == 'pending'"/>
                     <field name="state" widget="statusbar"/>
                 </header>
                 <sheet>
+					<div class="oe_button_box" name="button_box">
+						<button name="action_view_invoice" type="object" class="oe_stat_button" icon="fa-file-text-o"
+							invisible="invoice_count == 0">
+							<field name="invoice_count" widget="statinfo" string="Invoice"/>
+						</button>
+					</div>
                     <group>
                         <group>
                             <field name="partner_id"/>
                             <field name="sale_id" domain="[('partner_id', '=', partner_id), ('state', '=', 'sale'), ('invoice_status', '=', 'to invoice')]"/>
-                            <field name="external_token" readonly="1"/>
+                            <field name="external_token" readonly="1" invisible="1"/>
                         </group>
                         <group>
                             <field name="request_date"/>
